--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,7 +82,7 @@ button {
 
 input:hover,
 select:hover,
-textarea:hover, 
+textarea:hover,
 button:hover {
   border: 0.1rem #404040 solid;
 }
@@ -101,6 +101,14 @@ a.brand {
   color: #ffffff;
   font-size: 3rem;
   font-weight: bold;
+}
+.badge {
+  background-color: #f02020;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
 }
 .row {
   display: flex;
