--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -90,6 +90,10 @@ button.primary {
 button.block {
   width: 100%;
 }
+button.small {
+  font-size: 1.2rem;
+}
+
 /* Header */
 header a {
   color: #ffffff;
@@ -194,6 +198,11 @@ img.large {
   background-color: #ffe0e0;
 }
 
+.alert-success {
+  color: #20a020;
+  background-color: #eeffe0;
+}
+
 /* Form */
 .form {
   max-width: 60rem;
@@ -230,15 +239,32 @@ img.large {
 }
 
 /* Checkout steps */
-.checkout-steps > div{
+.checkout-steps > div {
   border-top: 0.3rem #c0c0c0 solid;
   color: #c0c0c0;
-  flex:1;
-  padding:1rem;
+  flex: 1;
+  padding: 1rem;
 }
 
-.checkout-steps > div.active{
+.checkout-steps > div.active {
   border-top-color: #f08000;
   color: #f08000;
   font-weight: bold;
+}
+/* Table */
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.table tbody tr:nth-of-type(odd) {
+  background-color: #f4f4f4;
+}
+.table td,
+.table th {
+  text-align: left;
+  border: 0.1rem solid #e4e4e4;
+  padding: 0.5rem;
+}
+.table button {
+  margin: 0 0.2rem;
 }
